@@ -1,0 +1,7 @@
+.deps
+.libs
+Makefile
+Makefile.in
+libwzd_auth.la
+tags
+*.lo
