@@ -1,0 +1,16 @@
+
+noinst_LTLIBRARIES = libwzd_auth.la
+
+libwzd_auth_ladir = ${e_prefix}/include/wzdftpd/libwzd-auth
+
+libwzd_auth_la_HEADERS = \
+	wzd_auth.h \
+	wzd_crypt.h \
+	wzd_md5.h \
+	wzd_md5crypt.h
+
+libwzd_auth_la_SOURCES = \
+	wzd_auth.c \
+	wzd_crypt.c \
+	wzd_md5.c \
+	wzd_md5crypt.c
