@@ -1,6 +1,10 @@
 #ifndef __WZD_MD5_H__
 #define __WZD_MD5_H__
 
+/*! \addtogroup libwzd_auth
+ *  @{
+ */
+
 typedef unsigned int uint32;
 
 #define MD5_DIGEST_SIZE 16
@@ -37,6 +41,8 @@ void strtomd5(char *ptr,char **ptest, unsigned char *crc);
 int calc_md5( const char *fname, unsigned char md5_crc[16], unsigned long startpos, unsigned long length );
 
 void md5_digest(const void *msg, unsigned int len, MD5_DIGEST);
+
+/*! @} */
 
 #endif /* __WZD_MD5_H__ */
 
